[Stories] fix responsive spacing, add responsive tables

--- a/public/scss/base/_type.scss
+++ b/public/scss/base/_type.scss
@@ -103,3 +103,7 @@ h5, .text-xl {
 .normal-case {
   text-transform: none;
 }
+
+.break-word {
+  word-break: break-word;
+}
